# grid

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  Vagrantfile  bugs.md  build.sh  notes.md  old_CMakeLists.txt  run  run.sh  schema.xsd
old_src/anemone/controllers/: CMakeLists.txt  instrument_select.cpp  instrument_select.hpp  last_step.cpp  layout.hpp  page.hpp  part.cpp  part.hpp  play_pause.cpp  play_pause.hpp  sequence.cpp  sequence.hpp  step.cpp
old_src/anemone/controllers/instruments/: CMakeLists.txt  instrument.cpp
src/: CMakeLists.txt  config.hpp  consts.hpp  controller.cpp  controller.hh  controller.hpp  grid.hh  grid.hpp  instrument.hpp  keyboard.hpp  knobs.hpp  main.cpp  sequencer.cpp  sequencer.hpp  state_handlers.hpp  types.hpp
src/.old/config/: config.hpp  sp404.hpp
src/.old/config/mappings/: er1.hpp
src/.old/handlers/: handlers.hpp  types.hpp
src/.old/instruments/: factory.hpp  gr1.hpp  sp404.hpp
src/.old/sequencer/: constants.hpp  ppqn.hpp
src/anemone/: CMakeLists.txt  anemone.cpp  anemone.hpp  clock.hpp  config.hpp  io.hpp  rx.hpp  state.hpp  types.hpp
src/anemone/action/: dispatcher.cpp  dispatcher.hpp  sequencer.hpp  steps.hpp  types.hpp
src/anemone/action/creators/: creators.cpp  creators.hpp  steps.cpp
src/anemone/actions/: action.hpp  dispatcher.hpp
src/anemone/clock/: clock.cpp  clock.hpp  constants.hpp  types.hpp
src/anemone/config/: base.cpp  base.hpp  config.cpp  config.hpp
src/anemone/config/layouts/: layout.cpp  layout.hpp  layouts.cpp  layouts.hpp  sequencer.cpp  sequencer.hpp
src/anemone/controllers/: bank.cpp  bank.hpp  base.hpp  controller.hpp  controllers.cpp  controllers.hpp  instrument_select.cpp  last_step.cpp  last_step.hpp  layout.cpp  page.cpp  part.cpp  play_pause.cpp  ppqn.cpp  ppqn.hpp  sequence.cpp  shift.cpp  shift.hpp  step.cpp  step.hpp
src/anemone/controllers/clock/: scheduler.cpp  scheduler.hpp
src/anemone/controllers/instruments/: instrument.cpp  instrument.hpp
src/anemone/controllers/sequencer/: steps.cpp
src/anemone/io/: io.cpp  io.hpp  observable.hpp  observer.hpp
src/anemone/io/grid/: CMakeLists.txt  address.hpp  coordinates.hpp  event.hpp  grid.cpp  grid.hpp  layout.hpp  monome.hpp  observer.hpp  section.cpp  section.hpp  types.hpp
src/anemone/io/midi/: event.cpp  event.hpp  midi.cpp  midi.hpp  observer.hpp  types.hpp
src/anemone/plugins/: manager.cpp
src/anemone/plugins/instruments/: manager.cpp  manager.hpp
src/anemone/rx/: dispatcher.hpp  observable.hpp  observer.hpp  predicate.hpp  reducer.hpp  root.hpp  state.hpp  types.hpp
src/anemone/rx/dag/: composition.hpp  high_frequency_state.hpp  node.hpp  observable.hpp  state.hpp  vector_composition.hpp
src/anemone/state/: composition.hpp  instruments.cpp  instruments.hpp  leaf.hpp  node.hpp  observable.hpp  observer.hpp  reducer.hpp  root.cpp  root.hpp  state.cpp  state.hpp
src/anemone/state/controls/: CMakeLists.txt  controls.cpp  controls.hpp
src/anemone/state/high_frequency/: sequences.cpp  sequences.hpp  step_cursors.cpp  step_cursors.hpp
src/anemone/state/instruments/: CMakeLists.txt  instrument.cpp  instrument.hpp  instruments.cpp  instruments.hpp  names.hpp  part.cpp  part.hpp  sequence.cpp  sequence.hpp  state.cpp  state.hpp
src/anemone/state/layout/: context.cpp  context.hpp  layout.cpp  layout.hpp  section.cpp  section.hpp
src/anemone/state/layouts/: CMakeLists.txt  layouts.cpp  layouts.hpp  sequencer.cpp  sequencer.hpp
src/anemone/state/selectors/: instruments.cpp  instruments.hpp  midi_events.cpp  midi_events.hpp  pages.cpp  pages.hpp  parts.cpp  parts.hpp  step_cursor.cpp  step_cursor.hpp  steps.cpp
src/anemone/types/: ppqn.hpp  sequencer.hpp
src/anemone/types/io/: midi.cpp  (+1 more)
src/anemone/ui/: banks.cpp  banks.hpp  component.cpp  component.hpp  instrument_select.cpp  instrument_select.hpp  page.cpp  page.hpp  parts.cpp  parts.hpp  play_pause.cpp  ppqn.cpp  ppqn.hpp  shift.cpp  show_last_step.cpp  show_last_step.hpp  step_sequence.cpp  step_sequence.hpp  steps.cpp  steps.hpp  stop.hpp  ui.cpp  ui.hpp
src/anemone/util/: concurrent_queue.hpp  match.hpp  wait.hpp
src/animation/: animator.hpp  types.hpp
src/config/: config.hpp  er1.hpp  gr1.hpp  mapping.hpp  ms20.hpp  sp404.hpp
src/config/mappings/: controller.hpp  gr1.hpp  ms20.hpp  sp404.hpp  types.hpp
src/controllers/: grid.hpp
src/engine/: CMakeLists.txt  engine.cpp
src/handlers/: handlers.hpp  types.hpp  utils.hpp
src/handlers/controller/: shift.hpp
src/impl/: CMakeLists.txt  midi.cpp
src/instruments/: er1.hpp  factory.hpp  gr1.hpp  instrument.hpp  ms20.hpp  ms_20.hpp  part.hpp  sp404.hpp
src/io/: CMakeLists.txt  input.hpp  io.cpp  io.hpp  output.hpp
src/modules/: CMakeLists.txt  output.cpp  output_midi_impl.cpp  sequencer.cpp
src/old/: sequencer.cpp  state.hpp  types.hpp
src/old/config/: base.hpp
src/old/handlers/: utils.hpp
src/old/instruments/: instrument.hpp  ms_20.hpp
src/old/sequencer/: scheduler.hpp
src/old/state/: root.hpp
src/old_instrument_plugins/er1/: er1.cpp  er1.hpp
src/old_instrument_plugins/microgranny/: microgranny.cpp  microgranny.hpp
src/sequencer/: constants.hpp  page.hpp  part.hpp  playback.hpp  ppqn.hpp  scheduler.hpp  sequence.hpp  steps.hpp  transport.hpp  types.hpp  utils.hpp
src/state/: state.hpp  state_machine.hpp
src/state/handlers/: handler_fn.hpp  handlers.hpp
src/v1/sequencer/: steps.hpp
src/v2/: actions.hpp  anemone.cpp  rx.hpp  types.hpp
src/v2/action/: dispatcher.cpp  play_pause.hpp  types.hpp
src/v2/config/: base.hpp
src/v2/controllers/: controllers.hpp
src/v2/io/: io.hpp  observable.hpp  observer.hpp
src/v2/rx/: filter.hpp  root.hpp  state.hpp
src/v2/types/: clock.hpp  midi.cpp  midi.hpp  ppqn.hpp  sequencer.cpp
src/v2/ui/: steps.hpp  ui.cpp
src/v2/util/: filepath.hpp  type_identity.hpp  wait.cpp
tests/: CMakeLists.txt
tests/mocks/: CMakeLists.txt
tests/mocks/device/: CMakeLists.txt  midi.cpp  midi.hpp
tests/unit/: CMakeLists.txt
tests/unit/io/: test.cpp
tests/unit/modules/: test_output.cpp  test_sequence.cpp  test_sequencer.cpp
(+351 files in other folders)
